--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,63 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="desk-notif">
+        <div class="desk-notif__card user">
+          <div class="card__content">
+            <div class="card__title">
+              <a class="link desk-notif__usermenu" href="">
+                <span class="username desk-notif__username _black">
+                <span class="username__first-letter _red">А</span>лексей Помазан
+              </span>
+            </a>
+              <a class="link desk-notif__user-icon avatar" href="">
+                <span class="avatar__image"></span>
+              </a>
+            </div>
+            <div class="card__details">
+              <div class="details__item details__item-mail">
+                <a class="link _black" href="">
+                  <span class="details__mail-title">Почта</span>
+                  <span class="details__mail-count">63</span>
+                </a>
+              </div>
+              <div class="details__item">
+                <a class="link _black"  href="">Диск</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="desk-notif__card">
+          <div class="card__content plus shifted-yes">
+            <a class="link _black plus" href="">
+            <div class="card__text">Плюс</div>
+            <div class="card__icon"></div>
+          </a>
+          </div>
+        </div>
+        <div class="desk-notif__card">
+          <div class="card__content covid shifted-yes">
+            <a class="link _black covid" href="">
+              <div class="card__title _bold">Коронавирус в России</div>
+              <div class="card__details covid">
+                <div class="details__covid small-hist">
+                  <svg class="covid-histogram" width="41" height="36">
+                    <use href="#icon-covid-histogram"></use>
+                  </svg>
+                </div>
+                <div class="details__covid histogram-desc">
+                  <span class="histogram-desc__count">+8475</span> выявлено
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="headline">
         <div class="headline__item headline__leftcorner">
           <a class="headline__geolink link" href="">
-            <svg
-              class="geolink__button"
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-            >
-              <path
-                fill="currentColor"
-                d="M13.07 3.58l-4 9.98a.5.5 0 0 1-.95-.06L7 9 2.5 7.88a.5.5 0 0 1-.06-.95l9.98-4a.5.5 0 0 1 .65.65z"
-              ></path>
+            <svg class="geolink__button" width="16" height="16">
+              <use href="#icon-geolink"></use>
             </svg>
             <span class="geolink__reg">Москва</span>
           </a>
@@ -51,6 +94,7 @@
         </div>
       </div>
       <div class="widgets container">
+        <div class="widgets__col td-0">
         <div class="widgets__news widget">
           <div class="news__tabs">
             <h1 class="news__head-item">
@@ -60,7 +104,7 @@
             </h1>
             <h1 class="news__head-item">
               <a class="link _light-blue" href="">
-                <span class="news__tabs-text">В Москве</span></a
+                <span class="news__tabs-text">в Москве</span></a
               >
             </h1>
             <h1 class="news__head-item">
@@ -99,8 +143,7 @@
                     <use href="#icon-rbk"></use>
                   </svg>
                   <span class="news__item-content">
-                    Россия и Пакистан подписали соглашение о строительстве
-                    газопровода «Пакистанский поток»
+                    Пострадавшая при стрельбе в Екатеринбурге девочка находится на операции
                   </span>
                 </a>
               </li>
@@ -145,6 +188,76 @@
               <span class="stocks__cell">-0,32%</span>
             </div>
             <span class="stocks__more-icon"></span>
+          </div>
+        </div>
+        </div>
+        <div class="widgets__col td-1">
+          <div class="widget widgets__weather">
+            <div class="weather__header">
+              <h1>
+                <a class="link weather__header-link _blue" href="">Погода</a>
+              </h1>
+              <div class="weather__header-links">
+                <a class="link weather__header-link _blue" href="">Карта осадков</a>
+              </div>
+            </div>
+            <div class="weather__content">
+              <a class="link weather__grade _black" href="">
+                <div class="weather__icon"></div>
+                <div class="weather__temp">+10°</div>
+              </a>
+              <div class="weather__forecast">
+                <a class="link weather__forecast-item _black" href="">
+                  <span class="weather__forecast-title _grey">Утром</span>
+                  <span class="weather__forecast-icon icon-1"></span>
+                  <span class="weather__forecast-grade">10°</span>
+                </a>
+                <a class="link weather__forecast-item _black" href="">
+                  <span class="weather__forecast-title _grey">Днём</span>
+                  <span class="weather__forecast-icon icon-2"></span>
+                  <span class="weather__forecast-grade">13°</span>
+                </a>
+                <a class="link weather__forecast-item _black" href="">
+                  <span class="weather__forecast-title _grey">Вечером</span>
+                  <span class="weather__forecast-icon icon-3"></span>
+                  <span class="weather__forecast-grade">12°</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="widget widgets__traffic">
+            <div class="traffic__header">
+              <h1>
+                <a class="link traffic__header-link _blue" href="">Пробки</a>
+              </h1>
+              <ul class="list traffic__geo-list">
+                <li class="list__item traffic__geo-list-item">
+                  <a class="link _blue" href="" target="_blank">Метро</a>
+                </li>
+                <li class="list__item traffic__geo-list-item">
+                  <a class="link _blue" href="" target="_blank">Расписания</a>
+                </li>
+                <li class="list__item traffic__geo-list-item">
+                  <a class="link _blue" href="" target="_blank">Такси</a>
+                </li>
+              </ul>
+            </div>
+            <div class="traffic__content">
+              <a class="link _black traffic__rate" href="">
+                <div class="traffic__icon"></div>
+                <div class="traffic__rate-text">0</div>
+              </a>
+              <div class="traffic__forecast">
+                <span class="traffic__forecast-item">
+                  <span class="traffic__forecast-time _grey">7ч</span>
+                  <div class="traffic__forecast-value _2">2</div>
+                </span>
+                <span class="traffic__forecast-item">
+                  <span class="traffic__forecast-time _grey">8ч</span>
+                  <div class="traffic__forecast-value _4">4</div>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -299,7 +412,7 @@
     </div>
     <div class="app__svg-store _hidden">
       <!-- inject:svg -->
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol id="icon-market-cart"><path class="notifier__clapper" d="M20.68 5.55H6.48l-.46-1.68a2.2 2.2 0 00-2.13-1.62H1.43a1.1 1.1 0 100 2.2H3.9l2.82 10.33a2.2 2.2 0 002.48 1.6l11.3-1.9a2.2 2.2 0 001.84-2.16V7.2c0-.91-.74-1.65-1.65-1.65zM5.83 22.05a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4zm11 0a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4z"/></symbol><symbol id="icon-notifier"><path class="notifier__clapper" d="M18 30a3 3 0 003-3c0-1.657-1.5 0-3-17-1.5 17-3 15.343-3 17a3 3 0 003 3z"/><path class="notifier__bell" d="M15.687 12.5l.3-.164a1.5 1.5 0 00.75-1.021l.142-.712a.75.75 0 01.736-.603h.77a.75.75 0 01.736.603l.142.712a1.5 1.5 0 00.75 1.02l.3.165a5.586 5.586 0 013.24 4.47l.54 4.863c.1.906.563 1.733 1.282 2.292l.354.275a1.5 1.5 0 01.534 1.548L26.25 26a1.32 1.32 0 01-1.28 1H11.03a1.32 1.32 0 01-1.28-1l-.013-.052a1.5 1.5 0 01.534-1.548l.354-.275a3.375 3.375 0 001.282-2.292l.54-4.864a5.586 5.586 0 013.24-4.469z"/></symbol><symbol id="icon-ya-logo"><path d="M121.943 65.335c2.261 0 3.865-.412 5.057-1.275v-3.988c-1.234.863-2.714 1.398-4.77 1.398-3.494 0-4.933-2.714-4.933-6.99 0-4.482 1.768-6.784 4.975-6.784 1.891 0 3.741.658 4.728 1.275v-4.153c-1.028-.576-2.837-.987-5.263-.987-6.249 0-9.498 4.482-9.498 10.772 0 6.908 3.166 10.732 9.704 10.732zm-30.59-1.81v-3.988c-1.521 1.028-4.07 1.933-6.455 1.933-3.578 0-4.934-1.686-5.14-5.14h11.8v-2.59c0-7.195-3.166-9.909-8.058-9.909-5.962 0-8.8 4.564-8.8 10.813 0 7.196 3.537 10.69 9.786 10.69 3.125 0 5.428-.822 6.867-1.809zM46.537 44.242v8.182h-6.538v-8.182h-4.892v20.681h4.892V56.29h6.538v8.634h4.893v-20.68h-4.893zM73.509 61.06h-2.18V44.242H57.063v1.768c0 5.057-.328 11.595-2.055 15.049h-1.522v8.593h4.523v-4.729h10.978v4.729h4.523v-8.593zm33.468 3.864h5.55l-7.853-11.142 6.908-9.539h-4.934l-6.908 9.539v-9.539h-4.892v20.681h4.892V54.768l7.237 10.155zm-23.56-17.227c2.426 0 3.166 2.015 3.166 4.605v.411h-6.825c.124-3.29 1.316-5.016 3.66-5.016zM66.437 61.06h-6.908c1.357-3.125 1.727-8.758 1.727-12.335v-.617h5.18V61.06z" fill="%23000"/><path d="M30.995 64.923H26.02v-24.71H23.8c-4.07 0-6.208 2.055-6.208 5.098 0 3.453 1.48 5.057 4.522 7.113l2.508 1.686-7.236 10.813H12l6.496-9.662c-3.741-2.673-5.838-5.263-5.838-9.662 0-5.51 3.824-9.251 11.101-9.251h7.236v28.575z" fill="%23FC3F1D"/></symbol></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol id="icon-covid-histogram"><rect y="33.8%" width="2" height="66.2%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="3" y="42.5%" width="2" height="57.5%" rx="1.5" ry="1.5" fill="#f3b45f"/><rect x="6" y="10.7%" width="2" height="89.3%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="9" y="20%" width="2" height="80%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="12" y="27.9%" width="2" height="72.1%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="15" y="20.8%" width="2" height="79.2%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="18" y="32.3%" width="2" height="67.7%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="21" y="43.1%" width="2" height="56.9%" rx="1.5" ry="1.5" fill="#f3b45f"/><rect x="24" y="34.1%" width="2" height="65.9%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="27" y="16.1%" width="2" height="83.9%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="30" y="11.7%" width="2" height="88.3%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="33" y="12.5%" width="2" height="87.5%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="36" y="0%" width="2" height="100%" rx="1.5" ry="1.5" fill="#a2202c"/><rect x="39" y="28.9%" width="2" height="71.1%" rx="1.5" ry="1.5" fill="#ee924f"/></symbol><symbol id="icon-geolink"><path fill="currentColor" d="M13.07 3.58l-4 9.98a.5.5 0 01-.95-.06L7 9 2.5 7.88a.5.5 0 01-.06-.95l9.98-4a.5.5 0 01.65.65z"/></symbol><symbol id="icon-market-cart"><path class="notifier__clapper" d="M20.68 5.55H6.48l-.46-1.68a2.2 2.2 0 00-2.13-1.62H1.43a1.1 1.1 0 100 2.2H3.9l2.82 10.33a2.2 2.2 0 002.48 1.6l11.3-1.9a2.2 2.2 0 001.84-2.16V7.2c0-.91-.74-1.65-1.65-1.65zM5.83 22.05a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4zm11 0a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4z"/></symbol><symbol id="icon-notifier"><path class="notifier__clapper" d="M18 30a3 3 0 003-3c0-1.657-1.5 0-3-17-1.5 17-3 15.343-3 17a3 3 0 003 3z"/><path class="notifier__bell" d="M15.687 12.5l.3-.164a1.5 1.5 0 00.75-1.021l.142-.712a.75.75 0 01.736-.603h.77a.75.75 0 01.736.603l.142.712a1.5 1.5 0 00.75 1.02l.3.165a5.586 5.586 0 013.24 4.47l.54 4.863c.1.906.563 1.733 1.282 2.292l.354.275a1.5 1.5 0 01.534 1.548L26.25 26a1.32 1.32 0 01-1.28 1H11.03a1.32 1.32 0 01-1.28-1l-.013-.052a1.5 1.5 0 01.534-1.548l.354-.275a3.375 3.375 0 001.282-2.292l.54-4.864a5.586 5.586 0 013.24-4.469z"/></symbol><symbol id="icon-ya-logo"><path d="M121.943 65.335c2.261 0 3.865-.412 5.057-1.275v-3.988c-1.234.863-2.714 1.398-4.77 1.398-3.494 0-4.933-2.714-4.933-6.99 0-4.482 1.768-6.784 4.975-6.784 1.891 0 3.741.658 4.728 1.275v-4.153c-1.028-.576-2.837-.987-5.263-.987-6.249 0-9.498 4.482-9.498 10.772 0 6.908 3.166 10.732 9.704 10.732zm-30.59-1.81v-3.988c-1.521 1.028-4.07 1.933-6.455 1.933-3.578 0-4.934-1.686-5.14-5.14h11.8v-2.59c0-7.195-3.166-9.909-8.058-9.909-5.962 0-8.8 4.564-8.8 10.813 0 7.196 3.537 10.69 9.786 10.69 3.125 0 5.428-.822 6.867-1.809zM46.537 44.242v8.182h-6.538v-8.182h-4.892v20.681h4.892V56.29h6.538v8.634h4.893v-20.68h-4.893zM73.509 61.06h-2.18V44.242H57.063v1.768c0 5.057-.328 11.595-2.055 15.049h-1.522v8.593h4.523v-4.729h10.978v4.729h4.523v-8.593zm33.468 3.864h5.55l-7.853-11.142 6.908-9.539h-4.934l-6.908 9.539v-9.539h-4.892v20.681h4.892V54.768l7.237 10.155zm-23.56-17.227c2.426 0 3.166 2.015 3.166 4.605v.411h-6.825c.124-3.29 1.316-5.016 3.66-5.016zM66.437 61.06h-6.908c1.357-3.125 1.727-8.758 1.727-12.335v-.617h5.18V61.06z" fill="%23000"/><path d="M30.995 64.923H26.02v-24.71H23.8c-4.07 0-6.208 2.055-6.208 5.098 0 3.453 1.48 5.057 4.522 7.113l2.508 1.686-7.236 10.813H12l6.496-9.662c-3.741-2.673-5.838-5.263-5.838-9.662 0-5.51 3.824-9.251 11.101-9.251h7.236v28.575z" fill="%23FC3F1D"/></symbol></svg>
       <!-- endinject -->
     </div>
     <script src="script.js"></script>
