--- a/src/index.html
+++ b/src/index.html
@@ -455,7 +455,15 @@
         </a>
       </div>
       <div class="zen container">
-        <div class="zen__header"></div>
+        <div class="zen__header">
+          <div class="zen__title">
+            <a href="" class="link _black">
+              <div class="zen__title-icon"></div>
+              <div class="zen__title-text">Дзен</div>
+            </a>
+          </div>
+          <div class="zen__desc">Блоги увлечённых людей</div>
+        </div>
         <div class="zen__content">
           <div class="zen__row">
             <div class="zen__item-wrap _size-big">
@@ -550,7 +558,170 @@
     </div>
     <div class="app__svg-store _hidden">
       <!-- inject:svg -->
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol id="icon-covid-histogram"><rect y="33.8%" width="2" height="66.2%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="3" y="42.5%" width="2" height="57.5%" rx="1.5" ry="1.5" fill="#f3b45f"/><rect x="6" y="10.7%" width="2" height="89.3%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="9" y="20%" width="2" height="80%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="12" y="27.9%" width="2" height="72.1%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="15" y="20.8%" width="2" height="79.2%" rx="1.5" ry="1.5" fill="#e95b3b"/><rect x="18" y="32.3%" width="2" height="67.7%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="21" y="43.1%" width="2" height="56.9%" rx="1.5" ry="1.5" fill="#f3b45f"/><rect x="24" y="34.1%" width="2" height="65.9%" rx="1.5" ry="1.5" fill="#ee924f"/><rect x="27" y="16.1%" width="2" height="83.9%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="30" y="11.7%" width="2" height="88.3%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="33" y="12.5%" width="2" height="87.5%" rx="1.5" ry="1.5" fill="#d1352b"/><rect x="36" y="0%" width="2" height="100%" rx="1.5" ry="1.5" fill="#a2202c"/><rect x="39" y="28.9%" width="2" height="71.1%" rx="1.5" ry="1.5" fill="#ee924f"/></symbol><symbol id="icon-geolink"><path fill="currentColor" d="M13.07 3.58l-4 9.98a.5.5 0 01-.95-.06L7 9 2.5 7.88a.5.5 0 01-.06-.95l9.98-4a.5.5 0 01.65.65z"/></symbol><symbol id="icon-market-cart"><path class="notifier__clapper" d="M20.68 5.55H6.48l-.46-1.68a2.2 2.2 0 00-2.13-1.62H1.43a1.1 1.1 0 100 2.2H3.9l2.82 10.33a2.2 2.2 0 002.48 1.6l11.3-1.9a2.2 2.2 0 001.84-2.16V7.2c0-.91-.74-1.65-1.65-1.65zM5.83 22.05a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4zm11 0a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4z"/></symbol><symbol id="icon-notifier"><path class="notifier__clapper" d="M18 30a3 3 0 003-3c0-1.657-1.5 0-3-17-1.5 17-3 15.343-3 17a3 3 0 003 3z"/><path class="notifier__bell" d="M15.687 12.5l.3-.164a1.5 1.5 0 00.75-1.021l.142-.712a.75.75 0 01.736-.603h.77a.75.75 0 01.736.603l.142.712a1.5 1.5 0 00.75 1.02l.3.165a5.586 5.586 0 013.24 4.47l.54 4.863c.1.906.563 1.733 1.282 2.292l.354.275a1.5 1.5 0 01.534 1.548L26.25 26a1.32 1.32 0 01-1.28 1H11.03a1.32 1.32 0 01-1.28-1l-.013-.052a1.5 1.5 0 01.534-1.548l.354-.275a3.375 3.375 0 001.282-2.292l.54-4.864a5.586 5.586 0 013.24-4.469z"/></symbol><symbol id="icon-ya-logo"><path d="M121.943 65.335c2.261 0 3.865-.412 5.057-1.275v-3.988c-1.234.863-2.714 1.398-4.77 1.398-3.494 0-4.933-2.714-4.933-6.99 0-4.482 1.768-6.784 4.975-6.784 1.891 0 3.741.658 4.728 1.275v-4.153c-1.028-.576-2.837-.987-5.263-.987-6.249 0-9.498 4.482-9.498 10.772 0 6.908 3.166 10.732 9.704 10.732zm-30.59-1.81v-3.988c-1.521 1.028-4.07 1.933-6.455 1.933-3.578 0-4.934-1.686-5.14-5.14h11.8v-2.59c0-7.195-3.166-9.909-8.058-9.909-5.962 0-8.8 4.564-8.8 10.813 0 7.196 3.537 10.69 9.786 10.69 3.125 0 5.428-.822 6.867-1.809zM46.537 44.242v8.182h-6.538v-8.182h-4.892v20.681h4.892V56.29h6.538v8.634h4.893v-20.68h-4.893zM73.509 61.06h-2.18V44.242H57.063v1.768c0 5.057-.328 11.595-2.055 15.049h-1.522v8.593h4.523v-4.729h10.978v4.729h4.523v-8.593zm33.468 3.864h5.55l-7.853-11.142 6.908-9.539h-4.934l-6.908 9.539v-9.539h-4.892v20.681h4.892V54.768l7.237 10.155zm-23.56-17.227c2.426 0 3.166 2.015 3.166 4.605v.411h-6.825c.124-3.29 1.316-5.016 3.66-5.016zM66.437 61.06h-6.908c1.357-3.125 1.727-8.758 1.727-12.335v-.617h5.18V61.06z" fill="%23000"/><path d="M30.995 64.923H26.02v-24.71H23.8c-4.07 0-6.208 2.055-6.208 5.098 0 3.453 1.48 5.057 4.522 7.113l2.508 1.686-7.236 10.813H12l6.496-9.662c-3.741-2.673-5.838-5.263-5.838-9.662 0-5.51 3.824-9.251 11.101-9.251h7.236v28.575z" fill="%23FC3F1D"/></symbol></svg>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+      >
+        <symbol id="icon-covid-histogram">
+          <rect
+            y="33.8%"
+            width="2"
+            height="66.2%"
+            rx="1.5"
+            ry="1.5"
+            fill="#ee924f"
+          />
+          <rect
+            x="3"
+            y="42.5%"
+            width="2"
+            height="57.5%"
+            rx="1.5"
+            ry="1.5"
+            fill="#f3b45f"
+          />
+          <rect
+            x="6"
+            y="10.7%"
+            width="2"
+            height="89.3%"
+            rx="1.5"
+            ry="1.5"
+            fill="#d1352b"
+          />
+          <rect
+            x="9"
+            y="20%"
+            width="2"
+            height="80%"
+            rx="1.5"
+            ry="1.5"
+            fill="#e95b3b"
+          />
+          <rect
+            x="12"
+            y="27.9%"
+            width="2"
+            height="72.1%"
+            rx="1.5"
+            ry="1.5"
+            fill="#e95b3b"
+          />
+          <rect
+            x="15"
+            y="20.8%"
+            width="2"
+            height="79.2%"
+            rx="1.5"
+            ry="1.5"
+            fill="#e95b3b"
+          />
+          <rect
+            x="18"
+            y="32.3%"
+            width="2"
+            height="67.7%"
+            rx="1.5"
+            ry="1.5"
+            fill="#ee924f"
+          />
+          <rect
+            x="21"
+            y="43.1%"
+            width="2"
+            height="56.9%"
+            rx="1.5"
+            ry="1.5"
+            fill="#f3b45f"
+          />
+          <rect
+            x="24"
+            y="34.1%"
+            width="2"
+            height="65.9%"
+            rx="1.5"
+            ry="1.5"
+            fill="#ee924f"
+          />
+          <rect
+            x="27"
+            y="16.1%"
+            width="2"
+            height="83.9%"
+            rx="1.5"
+            ry="1.5"
+            fill="#d1352b"
+          />
+          <rect
+            x="30"
+            y="11.7%"
+            width="2"
+            height="88.3%"
+            rx="1.5"
+            ry="1.5"
+            fill="#d1352b"
+          />
+          <rect
+            x="33"
+            y="12.5%"
+            width="2"
+            height="87.5%"
+            rx="1.5"
+            ry="1.5"
+            fill="#d1352b"
+          />
+          <rect
+            x="36"
+            y="0%"
+            width="2"
+            height="100%"
+            rx="1.5"
+            ry="1.5"
+            fill="#a2202c"
+          />
+          <rect
+            x="39"
+            y="28.9%"
+            width="2"
+            height="71.1%"
+            rx="1.5"
+            ry="1.5"
+            fill="#ee924f"
+          />
+        </symbol>
+        <symbol id="icon-geolink">
+          <path
+            fill="currentColor"
+            d="M13.07 3.58l-4 9.98a.5.5 0 01-.95-.06L7 9 2.5 7.88a.5.5 0 01-.06-.95l9.98-4a.5.5 0 01.65.65z"
+          />
+        </symbol>
+        <symbol id="icon-market-cart">
+          <path
+            class="notifier__clapper"
+            d="M20.68 5.55H6.48l-.46-1.68a2.2 2.2 0 00-2.13-1.62H1.43a1.1 1.1 0 100 2.2H3.9l2.82 10.33a2.2 2.2 0 002.48 1.6l11.3-1.9a2.2 2.2 0 001.84-2.16V7.2c0-.91-.74-1.65-1.65-1.65zM5.83 22.05a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4zm11 0a2.2 2.2 0 100-4.4 2.2 2.2 0 000 4.4z"
+          />
+        </symbol>
+        <symbol id="icon-notifier">
+          <path
+            class="notifier__clapper"
+            d="M18 30a3 3 0 003-3c0-1.657-1.5 0-3-17-1.5 17-3 15.343-3 17a3 3 0 003 3z"
+          />
+          <path
+            class="notifier__bell"
+            d="M15.687 12.5l.3-.164a1.5 1.5 0 00.75-1.021l.142-.712a.75.75 0 01.736-.603h.77a.75.75 0 01.736.603l.142.712a1.5 1.5 0 00.75 1.02l.3.165a5.586 5.586 0 013.24 4.47l.54 4.863c.1.906.563 1.733 1.282 2.292l.354.275a1.5 1.5 0 01.534 1.548L26.25 26a1.32 1.32 0 01-1.28 1H11.03a1.32 1.32 0 01-1.28-1l-.013-.052a1.5 1.5 0 01.534-1.548l.354-.275a3.375 3.375 0 001.282-2.292l.54-4.864a5.586 5.586 0 013.24-4.469z"
+          />
+        </symbol>
+        <symbol id="icon-ya-logo">
+          <path
+            d="M121.943 65.335c2.261 0 3.865-.412 5.057-1.275v-3.988c-1.234.863-2.714 1.398-4.77 1.398-3.494 0-4.933-2.714-4.933-6.99 0-4.482 1.768-6.784 4.975-6.784 1.891 0 3.741.658 4.728 1.275v-4.153c-1.028-.576-2.837-.987-5.263-.987-6.249 0-9.498 4.482-9.498 10.772 0 6.908 3.166 10.732 9.704 10.732zm-30.59-1.81v-3.988c-1.521 1.028-4.07 1.933-6.455 1.933-3.578 0-4.934-1.686-5.14-5.14h11.8v-2.59c0-7.195-3.166-9.909-8.058-9.909-5.962 0-8.8 4.564-8.8 10.813 0 7.196 3.537 10.69 9.786 10.69 3.125 0 5.428-.822 6.867-1.809zM46.537 44.242v8.182h-6.538v-8.182h-4.892v20.681h4.892V56.29h6.538v8.634h4.893v-20.68h-4.893zM73.509 61.06h-2.18V44.242H57.063v1.768c0 5.057-.328 11.595-2.055 15.049h-1.522v8.593h4.523v-4.729h10.978v4.729h4.523v-8.593zm33.468 3.864h5.55l-7.853-11.142 6.908-9.539h-4.934l-6.908 9.539v-9.539h-4.892v20.681h4.892V54.768l7.237 10.155zm-23.56-17.227c2.426 0 3.166 2.015 3.166 4.605v.411h-6.825c.124-3.29 1.316-5.016 3.66-5.016zM66.437 61.06h-6.908c1.357-3.125 1.727-8.758 1.727-12.335v-.617h5.18V61.06z"
+            fill="%23000"
+          />
+          <path
+            d="M30.995 64.923H26.02v-24.71H23.8c-4.07 0-6.208 2.055-6.208 5.098 0 3.453 1.48 5.057 4.522 7.113l2.508 1.686-7.236 10.813H12l6.496-9.662c-3.741-2.673-5.838-5.263-5.838-9.662 0-5.51 3.824-9.251 11.101-9.251h7.236v28.575z"
+            fill="%23FC3F1D"
+          />
+        </symbol>
+      </svg>
       <!-- endinject -->
     </div>
     <script src="script.js"></script>
